--- a/res/menu/hops_edit_menu.xml
+++ b/res/menu/hops_edit_menu.xml
@@ -1,6 +1,7 @@
 
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:id="@+id/add_menu" android:title="@string/add_menu" android:showAsAction="ifRoom">
+        <item android:id="@+id/add_menu" android:title="@string/add_menu" android:showAsAction="ifRoom|withText"
+            android:icon="@drawable/content_new">
             
         </item>
         <item android:id="@+id/save_menu" android:title="@string/save" android:enabled="false" android:showAsAction="ifRoom|withText"
