make ingredient list selection visible

--- a/res/layout/fragment_ingredient_list.xml
+++ b/res/layout/fragment_ingredient_list.xml
@@ -5,4 +5,18 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="fill_parent"
 	        android:layout_weight="1"
-	        tools:layout="@android:layout/list_content" />
+	        tools:layout="@android:layout/list_content" >
+	<LinearLayout 
+    	android:layout_width="match_parent"
+    	android:layout_height="match_parent"
+    	android:orientation="vertical">
+	    <ListView
+	      android:id="@+id/ingredient_list_list"
+	      android:layout_width="fill_parent"
+	      android:layout_height="wrap_content"
+	      android:divider="#b5b5b5"
+	      android:dividerHeight="1dp"
+	      >
+	    </ListView>
+	</LinearLayout>	   
+</fragment>	       
