--- a/res/values-large/refs.xml
+++ b/res/values-large/refs.xml
@@ -8,8 +8,11 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
     <item name="activity_ingredient_list" type="layout">@layout/activity_ingredient_twopane</item>
+    <item name="activity_calculators_list" type="layout">@layout/activity_calculators_twopane</item>
 	<item name="fragment_hop_detail" type="layout">@layout/fragment_hop_detail_large</item>
 	<item name="fragment_malt_detail" type="layout">@layout/fragment_malt_detail_large</item>
 	<item name="fragment_yeast_detail" type="layout">@layout/fragment_yeast_detail_large</item>
+	<item name="fragment_water_detail" type="layout">@layout/fragment_water_detail_large</item>
+	<item name="fragment_alcohol_calculator" type="layout">@layout/fragment_alcohol_calculator_large</item>
 	<item name="storage_factor" type="string">@string/storage_factor_large</item>
 </resources>
